src/sass/components/_main-home.scss
.home-container,
.watched,
.queue {
  background-color: inherit;
  display: grid;
  max-width: calc(100vw - 20px * 2);
  grid-template-columns: 280px;
  grid-auto-rows: 443px;
  grid-gap: 20px;
  justify-content: center;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 40px;
  margin-top: 20px;

  @media screen and (min-width: 768px) {
    max-width: calc(100vw - 75px * 2);
    grid-template-columns: repeat(2, 294px);
    grid-auto-rows: 440px;
    grid-gap: 30px;
    margin-bottom: 50px;
    margin-top: 60px;
  }

  @media screen and (min-width: 1024px) {
    max-width: calc(100vw - 71px * 2);
    grid-template-columns: repeat(3, 274px);
  }
}

.film-poster {
  width: 100%;
  height: 402px;
  border-radius: 5px;

  @media screen and (min-width: 768px) {
    height: 398px;
  }
}

.film-descr {
  background-color: inherit;
  margin-top: 10px;
  font-weight: 500;
  line-height: 16px;
}

.film-prewiev-title {
  text-transform: uppercase;
  margin-bottom: 2px;
}

.film-prewiev-genre {
  display: inline-block;
  color: $accent-color;
}

.prewiev-card {
  height: 101%;
  border-radius: 5px;
  background-image: url(../images/placeholder.gif);
  background-color: inherit;
  transition: 300ms;
}

.prewiev-card:hover {
  transform: scale(1.1);
}

.isHide {
  display: none;
}

